// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreflightCheck click on section title open correct section 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main preFlightCheckContainer StyledProps--padding-medium"
  >
    <div
      class="Layout--horizontal StyledProps--main headLine"
    >
      <span
        class="title"
      >
        pre-flight-check.preFlightCheckTitle
      </span>
    </div>
    <div
      class="bp3-progress-bar bp3-intent-success"
    >
      <div
        class="bp3-progress-meter"
        style="width: 66.66666666666667%;"
      />
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main sectionsWrapper"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-xlarge StyledProps--main sectionLabelsWrapper"
      >
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-bold"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          pre-flight-check.verifyingPipelineInputs
        </span>
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-light"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon StyledProps--main spinningIcon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-grey400"
            data-icon="pending"
          >
            <svg
              height="16"
              viewBox="0 0 9 9"
              width="16"
            >
              <path
                d="M8.206 2.709a.404.404 0 01-.215.057.443.443 0 01-.343-.186c-.13-.215-.287-.402-.445-.588a.39.39 0 01.015-.559.39.39 0 01.558.014c.201.215.387.459.545.717a.38.38 0 01-.115.545zM5.987 7.868A3.705 3.705 0 007.45 6.72a.392.392 0 01.56-.071.392.392 0 01.07.559 4.62 4.62 0 01-1.776 1.404c-.058.029-.1.029-.158.029a.402.402 0 01-.373-.244.411.411 0 01.215-.53zM8.078 5.403c.13-.473.143-.974.086-1.447a.39.39 0 01.344-.445.39.39 0 01.444.344 4.317 4.317 0 01-.1 1.763.396.396 0 01-.387.301c-.029 0-.072 0-.1-.014a.42.42 0 01-.287-.502zM5.748.858A.387.387 0 116.491.64a.387.387 0 01-.743.217zM4.525 0a.4.4 0 110 .803A3.706 3.706 0 00.827 4.5c0 .387.057.774.186 1.16a.391.391 0 01-.258.502c-.043.015-.086.015-.129.015-.172 0-.33-.1-.372-.273A4.305 4.305 0 01.024 4.5c0-2.48 2.021-4.5 4.5-4.5zM1.802 6.994a3.724 3.724 0 002.723 1.204.4.4 0 110 .802 4.494 4.494 0 01-3.311-1.462.39.39 0 01.029-.559c.157-.157.4-.143.559.015z"
              />
            </svg>
          </span>
          pre-flight-check.verifyingConnectors
        </span>
      </div>
      <div
        class="divider"
      />
      <div
        class="sectionPanelWrapper"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main inputFqn"
              style="--text-line-clamp: 1;"
            >
              test.steps.step1.url
            </p>
            <span
              class="StyledProps--font StyledProps--main StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dot StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                icon="dot"
              >
                <svg
                  data-icon="dot"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    dot
                  </desc>
                  <path
                    d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              success
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footerInProgress"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pre-flight-check.skipCheckBtn
        </span>
      </button>
      <p
        class="StyledProps--font StyledProps--main footerSmallText"
      >
        pre-flight-check.skipCheckInfo
      </p>
    </div>
  </div>
</div>
`;

exports[`PreflightCheck click on section title open correct section 2`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main preFlightCheckContainer StyledProps--padding-medium"
  >
    <div
      class="Layout--horizontal StyledProps--main headLine"
    >
      <span
        class="title"
      >
        pre-flight-check.preFlightCheckTitle
      </span>
    </div>
    <div
      class="bp3-progress-bar bp3-intent-success"
    >
      <div
        class="bp3-progress-meter"
        style="width: 66.66666666666667%;"
      />
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main sectionsWrapper"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-xlarge StyledProps--main sectionLabelsWrapper"
      >
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-light"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          pre-flight-check.verifyingPipelineInputs
        </span>
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-bold"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon StyledProps--main spinningIcon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-grey400"
            data-icon="pending"
          >
            <svg
              height="16"
              viewBox="0 0 9 9"
              width="16"
            >
              <path
                d="M8.206 2.709a.404.404 0 01-.215.057.443.443 0 01-.343-.186c-.13-.215-.287-.402-.445-.588a.39.39 0 01.015-.559.39.39 0 01.558.014c.201.215.387.459.545.717a.38.38 0 01-.115.545zM5.987 7.868A3.705 3.705 0 007.45 6.72a.392.392 0 01.56-.071.392.392 0 01.07.559 4.62 4.62 0 01-1.776 1.404c-.058.029-.1.029-.158.029a.402.402 0 01-.373-.244.411.411 0 01.215-.53zM8.078 5.403c.13-.473.143-.974.086-1.447a.39.39 0 01.344-.445.39.39 0 01.444.344 4.317 4.317 0 01-.1 1.763.396.396 0 01-.387.301c-.029 0-.072 0-.1-.014a.42.42 0 01-.287-.502zM5.748.858A.387.387 0 116.491.64a.387.387 0 01-.743.217zM4.525 0a.4.4 0 110 .803A3.706 3.706 0 00.827 4.5c0 .387.057.774.186 1.16a.391.391 0 01-.258.502c-.043.015-.086.015-.129.015-.172 0-.33-.1-.372-.273A4.305 4.305 0 01.024 4.5c0-2.48 2.021-4.5 4.5-4.5zM1.802 6.994a3.724 3.724 0 002.723 1.204.4.4 0 110 .802 4.494 4.494 0 01-3.311-1.462.39.39 0 01.029-.559c.157-.157.4-.143.559.015z"
              />
            </svg>
          </span>
          pre-flight-check.verifyingConnectors
        </span>
      </div>
      <div
        class="divider"
      />
      <div
        class="sectionPanelWrapper"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main connectorName"
            >
              Connector1
            </p>
            <span
              class="connectorId"
            >
              idLabel
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <a
                    class=""
                    href="/account/accId/ci/orgs/orgId/projects/projId/admin/resources/connectors/:connectorId"
                    tabindex="0"
                    target="_blank"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main"
                      style="--text-line-clamp: 1;"
                    >
                      Connector1
                    </p>
                  </a>
                </span>
              </span>
            </span>
            <span
              class="StyledProps--font StyledProps--main StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dot StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                icon="dot"
              >
                <svg
                  data-icon="dot"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    dot
                  </desc>
                  <path
                    d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              success
            </span>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main connectorName"
            >
              Connector1
            </p>
            <span
              class="connectorId"
            >
              idLabel
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <a
                    class=""
                    href="/account/accId/ci/orgs/orgId/projects/projId/admin/resources/connectors/:connectorId"
                    tabindex="0"
                    target="_blank"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main"
                      style="--text-line-clamp: 1;"
                    >
                      Connector1
                    </p>
                  </a>
                </span>
              </span>
            </span>
            <span
              class="StyledProps--font StyledProps--main StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dot StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-grey400"
                icon="dot"
              >
                <svg
                  data-icon="dot"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    dot
                  </desc>
                  <path
                    d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              in progress
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footerInProgress"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pre-flight-check.skipCheckBtn
        </span>
      </button>
      <p
        class="StyledProps--font StyledProps--main footerSmallText"
      >
        pre-flight-check.skipCheckInfo
      </p>
    </div>
  </div>
</div>
`;

exports[`PreflightCheck renders property when has failed checks 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main preFlightCheckContainer StyledProps--padding-medium"
  >
    <div
      class="Layout--horizontal StyledProps--main headLine"
    >
      <span
        class="title"
      >
        pre-flight-check.preFlightCheckTitle
      </span>
      <span
        class="error"
      >
        pre-flight-check.errorFoundCounter
      </span>
    </div>
    <div
      class="bp3-progress-bar bp3-intent-danger"
    >
      <div
        class="bp3-progress-meter"
        style="width: 100%;"
      />
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main sectionsWrapper"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-xlarge StyledProps--main sectionLabelsWrapper"
      >
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-light"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon bp3-icon-small-cross StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-red500"
            icon="small-cross"
          >
            <svg
              data-icon="small-cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                small-cross
              </desc>
              <path
                d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          pre-flight-check.verifyingPipelineInputs
        </span>
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-bold"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon bp3-icon-small-cross StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-red500"
            icon="small-cross"
          >
            <svg
              data-icon="small-cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                small-cross
              </desc>
              <path
                d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          pre-flight-check.verifyingConnectors
        </span>
      </div>
      <div
        class="divider"
      />
      <div
        class="sectionPanelWrapper"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main connectorName"
            >
              account.testconttlshanf
            </p>
            <span
              class="connectorId"
            >
              idLabel
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <a
                    class=""
                    href="/account/accId/admin/resources/connectors/testconttlshanf"
                    tabindex="0"
                    target="_blank"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main"
                      style="--text-line-clamp: 1;"
                    >
                      account.testconttlshanf
                    </p>
                  </a>
                </span>
              </span>
            </span>
            <span
              class="StyledProps--font StyledProps--main StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dot StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                icon="dot"
              >
                <svg
                  data-icon="dot"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    dot
                  </desc>
                  <path
                    d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              success
            </span>
          </div>
          <div
            class="Accordion--accordion"
          >
            <div
              class="Accordion--panel"
              data-open="false"
              data-testid="org.orgConnectorId-panel"
            >
              <div
                class="Accordion--summary"
                data-testid="org.orgConnectorId-summary"
              >
                <div
                  class="Accordion--chevron"
                />
                <div
                  class=""
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
                  >
                    <p
                      class="StyledProps--font StyledProps--main connectorName"
                    >
                      org.orgConnectorId
                    </p>
                    <span
                      class="connectorId"
                    >
                      idLabel
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <a
                            class=""
                            href="/account/accId/admin/organizations/orgId/resources/connectors/orgConnectorId"
                            tabindex="0"
                            target="_blank"
                          >
                            <p
                              class="StyledProps--font Text--lineclamp StyledProps--main"
                              style="--text-line-clamp: 1;"
                            >
                              org.orgConnectorId
                            </p>
                          </a>
                        </span>
                      </span>
                    </span>
                    <span
                      class="StyledProps--font StyledProps--main StyledProps--inline"
                      style="display: inline-flex; align-items: center;"
                    >
                      <span
                        class="bp3-icon bp3-icon-dot StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-red500"
                        icon="dot"
                      >
                        <svg
                          data-icon="dot"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            dot
                          </desc>
                          <path
                            d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      failure
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="bp3-collapse Accordion--collapse"
              >
                <div
                  aria-hidden="false"
                  class="bp3-collapse-body"
                  style="transform: translateY(-undefinedpx);"
                />
              </div>
            </div>
          </div>
          <div
            class="Accordion--accordion"
          >
            <div
              class="Accordion--panel"
              data-open="false"
              data-testid="projectConnectorId-panel"
            >
              <div
                class="Accordion--summary"
                data-testid="projectConnectorId-summary"
              >
                <div
                  class="Accordion--chevron"
                />
                <div
                  class=""
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
                  >
                    <p
                      class="StyledProps--font StyledProps--main connectorName"
                    >
                      projectConnectorId
                    </p>
                    <span
                      class="connectorId"
                    >
                      idLabel
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <a
                            class=""
                            href="/account/accId/ci/orgs/orgId/projects/projId/admin/resources/connectors/:connectorId"
                            tabindex="0"
                            target="_blank"
                          >
                            <p
                              class="StyledProps--font Text--lineclamp StyledProps--main"
                              style="--text-line-clamp: 1;"
                            >
                              projectConnectorId
                            </p>
                          </a>
                        </span>
                      </span>
                    </span>
                    <span
                      class="StyledProps--font StyledProps--main StyledProps--inline"
                      style="display: inline-flex; align-items: center;"
                    >
                      <span
                        class="bp3-icon bp3-icon-dot StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-red500"
                        icon="dot"
                      >
                        <svg
                          data-icon="dot"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            dot
                          </desc>
                          <path
                            d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      failure
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="bp3-collapse Accordion--collapse"
              >
                <div
                  aria-hidden="false"
                  class="bp3-collapse-body"
                  style="transform: translateY(-undefinedpx);"
                />
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main connectorName"
            >
              Connector1
            </p>
            <span
              class="connectorId"
            >
              idLabel
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <a
                    class=""
                    href="/account/accId/ci/orgs/orgId/projects/projId/admin/resources/connectors/:connectorId"
                    tabindex="0"
                    target="_blank"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main"
                      style="--text-line-clamp: 1;"
                    >
                      Connector1
                    </p>
                  </a>
                </span>
              </span>
            </span>
            <span
              class="StyledProps--font StyledProps--main StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dot StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                icon="dot"
              >
                <svg
                  data-icon="dot"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    dot
                  </desc>
                  <path
                    d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              success
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footerFailure"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          retry
        </span>
      </button>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          close
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pre-flight-check.continueToRunPipeline
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`PreflightCheck renders property when has in progress checks 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main preFlightCheckContainer StyledProps--padding-medium"
  >
    <div
      class="Layout--horizontal StyledProps--main headLine"
    >
      <span
        class="title"
      >
        pre-flight-check.preFlightCheckTitle
      </span>
    </div>
    <div
      class="bp3-progress-bar bp3-intent-success"
    >
      <div
        class="bp3-progress-meter"
        style="width: 66.66666666666667%;"
      />
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main sectionsWrapper"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-xlarge StyledProps--main sectionLabelsWrapper"
      >
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-light"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          pre-flight-check.verifyingPipelineInputs
        </span>
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-bold"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon StyledProps--main spinningIcon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-grey400"
            data-icon="pending"
          >
            <svg
              height="16"
              viewBox="0 0 9 9"
              width="16"
            >
              <path
                d="M8.206 2.709a.404.404 0 01-.215.057.443.443 0 01-.343-.186c-.13-.215-.287-.402-.445-.588a.39.39 0 01.015-.559.39.39 0 01.558.014c.201.215.387.459.545.717a.38.38 0 01-.115.545zM5.987 7.868A3.705 3.705 0 007.45 6.72a.392.392 0 01.56-.071.392.392 0 01.07.559 4.62 4.62 0 01-1.776 1.404c-.058.029-.1.029-.158.029a.402.402 0 01-.373-.244.411.411 0 01.215-.53zM8.078 5.403c.13-.473.143-.974.086-1.447a.39.39 0 01.344-.445.39.39 0 01.444.344 4.317 4.317 0 01-.1 1.763.396.396 0 01-.387.301c-.029 0-.072 0-.1-.014a.42.42 0 01-.287-.502zM5.748.858A.387.387 0 116.491.64a.387.387 0 01-.743.217zM4.525 0a.4.4 0 110 .803A3.706 3.706 0 00.827 4.5c0 .387.057.774.186 1.16a.391.391 0 01-.258.502c-.043.015-.086.015-.129.015-.172 0-.33-.1-.372-.273A4.305 4.305 0 01.024 4.5c0-2.48 2.021-4.5 4.5-4.5zM1.802 6.994a3.724 3.724 0 002.723 1.204.4.4 0 110 .802 4.494 4.494 0 01-3.311-1.462.39.39 0 01.029-.559c.157-.157.4-.143.559.015z"
              />
            </svg>
          </span>
          pre-flight-check.verifyingConnectors
        </span>
      </div>
      <div
        class="divider"
      />
      <div
        class="sectionPanelWrapper"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main connectorName"
            >
              Connector1
            </p>
            <span
              class="connectorId"
            >
              idLabel
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <a
                    class=""
                    href="/account/accId/ci/orgs/orgId/projects/projId/admin/resources/connectors/:connectorId"
                    tabindex="0"
                    target="_blank"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main"
                      style="--text-line-clamp: 1;"
                    >
                      Connector1
                    </p>
                  </a>
                </span>
              </span>
            </span>
            <span
              class="StyledProps--font StyledProps--main StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dot StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                icon="dot"
              >
                <svg
                  data-icon="dot"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    dot
                  </desc>
                  <path
                    d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              success
            </span>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main connectorName"
            >
              Connector1
            </p>
            <span
              class="connectorId"
            >
              idLabel
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <a
                    class=""
                    href="/account/accId/ci/orgs/orgId/projects/projId/admin/resources/connectors/:connectorId"
                    tabindex="0"
                    target="_blank"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main"
                      style="--text-line-clamp: 1;"
                    >
                      Connector1
                    </p>
                  </a>
                </span>
              </span>
            </span>
            <span
              class="StyledProps--font StyledProps--main StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dot StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-grey400"
                icon="dot"
              >
                <svg
                  data-icon="dot"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    dot
                  </desc>
                  <path
                    d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              in progress
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footerInProgress"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pre-flight-check.skipCheckBtn
        </span>
      </button>
      <p
        class="StyledProps--font StyledProps--main footerSmallText"
      >
        pre-flight-check.skipCheckInfo
      </p>
    </div>
  </div>
</div>
`;

exports[`PreflightCheck renders property when return all success checks 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main preFlightCheckContainer StyledProps--padding-medium"
  >
    <div
      class="Layout--horizontal StyledProps--main headLine"
    >
      <span
        class="title"
      >
        pre-flight-check.preFlightCheckTitle
      </span>
    </div>
    <div
      class="bp3-progress-bar bp3-intent-success"
    >
      <div
        class="bp3-progress-meter"
        style="width: 100%;"
      />
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main sectionsWrapper"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-xlarge StyledProps--main sectionLabelsWrapper"
      >
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-bold"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          pre-flight-check.verifyingPipelineInputs
        </span>
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-light"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          pre-flight-check.verifyingConnectors
        </span>
      </div>
      <div
        class="divider"
      />
      <div
        class="sectionPanelWrapper"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main inputFqn"
              style="--text-line-clamp: 1;"
            >
              test.steps.step1.url
            </p>
            <span
              class="StyledProps--font StyledProps--main StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dot StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                icon="dot"
              >
                <svg
                  data-icon="dot"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    dot
                  </desc>
                  <path
                    d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              success
            </span>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main inputFqn"
              style="--text-line-clamp: 1;"
            >
              pipeline.stages.s2.execution.steps.step2.url
            </p>
            <span
              class="StyledProps--font StyledProps--main StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dot StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                icon="dot"
              >
                <svg
                  data-icon="dot"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    dot
                  </desc>
                  <path
                    d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              success
            </span>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main inputFqn"
              style="--text-line-clamp: 1;"
            >
              pipeline.stages.s3.execution.steps.step3.url
            </p>
            <span
              class="StyledProps--font StyledProps--main StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dot StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                icon="dot"
              >
                <svg
                  data-icon="dot"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    dot
                  </desc>
                  <path
                    d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              success
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footerFailure"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          retry
        </span>
      </button>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          close
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pre-flight-check.continueToRunPipeline
        </span>
      </button>
    </div>
  </div>
</div>
`;
